<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/TitleText"
            android:id="@+id/entry_title"
            android:text="@string/entry_title" />
        <ImageView
            style="@style/Image"
            android:id="@+id/entry_image"
            android:contentDescription="@string/entry_image_description"/>
        <TextView
            style="@style/Text"
            android:id="@+id/entry_description"
            android:text="@string/entry_description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/Text"
                android:text="@string/entry_popularity"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
            <TextView
                style="@style/Text"
                android:id="@+id/entry_popularity"
                android:text="@string/entry_popularity"
                android:textAlignment="textStart"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/Text"
                android:text="@string/entry_rating"
                android:textAlignment="textEnd"
                android:layout_weight="1"/>
            <TextView
                style="@style/Text"
                android:id="@+id/entry_user_rating"
                android:textAlignment="textStart"
                android:text="@string/entry_rating"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
