<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:padding="5dp">
        <TextView
            android:id="@+id/top_movie"
            android:text="@string/top_movie"
            android:onClick="prioritySelected"
            android:textSize="18dp"
            android:textAllCaps="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/top_rated_movie"
            android:text="@string/top_rated_movie"
            android:onClick="prioritySelected"
            android:textSize="18dp"
            android:textAllCaps="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/top_tv"
            android:text="@string/top_tv"
            android:onClick="prioritySelected"
            android:textSize="18dp"
            android:textAllCaps="true"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>
    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:numColumns="3"
        android:stretchMode="columnWidth">
    </GridView>
</LinearLayout>
